--- a/dynamic_website/birdFood.html
+++ b/dynamic_website/birdFood.html
@@ -28,7 +28,7 @@
     <div id="callIcon"><img src="images/icons/callIcon.png"/></div>
 
     <a href ="index.php"><img src="images/logo.png" id = "logo" /></a>
-
+    <img src="images/logo.png" />
 </div>
 
 <div id = "catDivContainer">
