--- a/dynamic_website/reptileFood.html
+++ b/dynamic_website/reptileFood.html
@@ -61,6 +61,7 @@
 </div>
 
 
+<img src="images/products/birdFood.png" height="510" width="525"/>
 <footer id="bottom">
     <div id = contactUS>About Us</div>
     <div id = terms>Policy</div>
